--- a/config/people/myles.yml
+++ b/config/people/myles.yml
@@ -39,18 +39,18 @@ recipes:
 attributes:
     dotfiles:
         vimusers:
-#            - root
+            - root
 #            - myles
         kdeploy:
             hostname: myles-mbp
-#        vim:
-#            bundle:
-#                - sleuth: git://github.com/tpope/vim-sleuth.git
+        vim:
+            bundle:
+                - sleuth: git://github.com/tpope/vim-sleuth.git
 #                - sensible: git://github.com/tpope/vim-sensible.git
 #                - gitgutter: git://github.com/airblade/vim-gitgutter.git
 #                - airline: https://github.com/bling/vim-airline
 #                - syntastic: git://github.com/scrooloose/syntastic.git
-#                - nerdtree: https://github.com/scrooloose/nerdtree.git
+                - nerdtree: https://github.com/scrooloose/nerdtree.git
     git:
         name: Myles Steinhauser
         email: myles.steinhauser@gmail.com
