--- a/config/groups/developer.yml
+++ b/config/groups/developer.yml
@@ -25,7 +25,7 @@ recipes:
     mac_os_x:
         - applications::imageoptim
         - applications::imagealpha
-        - applications::svgo
+#        - applications::svgo
 #        - applications::sublime_text_3
 #        - applications::phpstorm
         - applications::watch
