--- a/config/groups/bash.yml
+++ b/config/groups/bash.yml
@@ -1,6 +1,6 @@
 recipes:
     global:
         - applications::bash-completion
-        - dotfiles::bash_it
-        - dotfiles::inputrc
+#        - dotfiles::bash_it
+#        - dotfiles::inputrc
         - applications::bash
