Include inputrc by default

--- a/config/groups/bash.yml
+++ b/config/groups/bash.yml
@@ -2,5 +2,5 @@ recipes:
     global:
         - applications::bash-completion
 #        - dotfiles::bash_it
-#        - dotfiles::inputrc
+        - dotfiles::inputrc
         - applications::bash
