Do not install Dropbox automatically

--- a/config/people/brightcove.yml
+++ b/config/people/brightcove.yml
@@ -9,7 +9,7 @@ recipes:
     mac_os_x:
         - sudo::default
 #        - applications::1password
-        - applications::dropbox
+#        - applications::dropbox
 #        - applications::evernote
 #        - applications::istatmenus4
 #        - applications::kaleidoscope
