--- a/config/people/myles.yml
+++ b/config/people/myles.yml
@@ -7,34 +7,35 @@ recipes:
     global:
         - dotfiles::sshconfig
     mac_os_x:
-#        - applications::1password
-        - applications::dropbox
-#        - applications::evernote
-#        - applications::istatmenus4
-#        - applications::kaleidoscope
-        - applications::omnigraffle
-#        - applications::alfred
-        - applications::totalfinder
-#        - applications::spotify
         - applications::bartender
-        - sudo::default
+        - applications::dropbox
+        - applications::omnigraffle
+        - applications::tmux
+        - applications::totalfinder
         - applications::vagrant
-#        - osxdefaults::dock_automatically_hide_and_show_the_dock
         - osxdefaults::dock_do_not_animate_opening_applications_from_the_dock
+        - osxdefaults::dock_enable_highlight_hover_effect_for_the_grid_view_of_a_stack
         - osxdefaults::dock_enable_spring_loading_for_all_dock_items
         - osxdefaults::dock_make_dock_icons_of_hidden_applications_translucent
         - osxdefaults::dock_minimize_to_application
-        - osxdefaults::dock_set_the_icon_size_of_dock_items_to_36_pixels
-        - osxdefaults::dock_show_indicator_lights_for_open_applications_in_the_dock
-#        - osxdefaults::dock_position_the_dock_on_the_left_side
-        - osxdefaults::dock_enable_highlight_hover_effect_for_the_grid_view_of_a_stack
         - osxdefaults::dock_remove_the_animation_when_hiding_showing_the_dock
         - osxdefaults::dock_remove_the_auto-hiding_dock_delay
-        - osxdefaults::menu_add_battery_percentage
-#        - osxdefaults::menu_show_clock_with_date
-        - osxdefaults::mail_when_searching_do_not_include_trash
+        - osxdefaults::dock_set_the_icon_size_of_dock_items_to_36_pixels
+        - osxdefaults::dock_show_indicator_lights_for_open_applications_in_the_dock
         - osxdefaults::mail_copy_email_addresses_instead_of_names_in_mail
+        - osxdefaults::mail_when_searching_do_not_include_trash
+        - osxdefaults::menu_add_battery_percentage
         - osxdefaults::set_computer_name
+        - sudo::default
+#        - applications::1password
+#        - applications::alfred
+#        - applications::evernote
+#        - applications::istatmenus4
+#        - applications::kaleidoscope
+#        - applications::spotify
+#        - osxdefaults::dock_automatically_hide_and_show_the_dock
+#        - osxdefaults::dock_position_the_dock_on_the_left_side
+#        - osxdefaults::menu_show_clock_with_date
 attributes:
     dotfiles:
         vimusers:
